tests/baselines/reference/higherKindedTypesLift4.errors.txt
tests/cases/compiler/higherKindedTypesLift4.ts(51,87): error TS9999: Type parameters for type 'LRC2Bound' are not compatible with type parameters for type 'Bound'
tests/cases/compiler/higherKindedTypesLift4.ts(82,30): error TS2345: Argument of type '<C1 extends Functor<C1, T1Bound, T1Bound>, T1Bound, A1 extends T1Bound, B1 extends T1Bound>(fa1: C1, fmap1: FMap<A1, B1>) => C1' is not assignable to parameter of type 'StaticFunctor<Functor<CX, AX, AXBound>, {}, {}>'.
  Types of parameters 'fmap1' and 'fmap2' are incompatible.
    Types of parameters 'fmapfa' and 'fmapfa' are incompatible.
      Type 'AXBound' is not assignable to type 'AS'.
tests/cases/compiler/higherKindedTypesLift4.ts(94,56): error TS2345: Argument of type 'FunctorFoo<EndVal>' is not assignable to parameter of type 'FunctorFoo<StartVal>'.
  Type 'EndVal' is not assignable to type 'StartVal'.
    Property 'startVal' is missing in type 'EndVal'.


==== tests/cases/compiler/higherKindedTypesLift4.ts (3 errors) ====
    export interface FMap<FA, FB> {
        (fmapfa: FA): FB
    }
    
    interface Bounded<
        BC<_BCT> extends Bound<BC, _BCT>,
        Bound<
            _BC<__BCT>,
            _BT
        >,
        BT extends BTBound,
        BTBound = BT
    > {}
    
    interface Functor<CX<_TX extends AXBound> extends Functor<CX, AX, AXBound>, AX extends AXBound, AXBound = AX> extends Bounded<CX, Functor, AX, AXBound> {
        map<BX extends AXBound>(fmapx: (fmapxax: AX) => BX): CX<BX>;
    }
    
    interface FunctorFoo<AFoo> extends Functor<FunctorFoo, AFoo> {
        map<BFoo>(fmapfoo: FMap<AFoo, BFoo>): FunctorFoo<BFoo>;
        fooVal: AFoo
    }
    
    interface StaticFunctor<
        SC<_T extends SCTBound> extends SCBound<SC, _T> & Bounded<SC, SCBound, _T, SCTBound>,
        SCBound<
         _BC<__BCT>,
         _BT
        >,
        SCTBound = {}
    > {
        <AS extends SCTBound, BS extends SCTBound>(fa2: SC<AS>, fmap2: FMap<AS,BS>): SC<BS>
    }
    
    
    declare function staticMap<C1<_T1 extends T1Bound> extends Functor<C1, _T1, T1Bound>, T1Bound, A1 extends T1Bound, B1 extends T1Bound>(fa1: C1<A1>, fmap1: FMap<A1, B1>): C1<B1>;
    
    
    interface LiftedResult<
        LC<_LT extends LRTBound> extends LRCBound<LC, _LT> & Bounded<LC, LRCBound, _LT, LRTBound>,
        LRCBound<
        _BC<__BCT>,
        _BT
       >,
       LRTBound 
    > {
        <LA, LB>(lmap: FMap<LA,LB>): LiftedResult2<LC, LA, LB, LRCBound>
    }
    
    interface LiftedResult2<
        LC2<_LT extends LA2 | LB2> extends LRC2Bound<LC2, _LT,  LA2 | LB2> & Bounded<LC2, LRC2Bound, _LT, LA2 | LB2>, 
                                                                                          ~~~~~~~~~
!!! error TS9999: Type parameters for type 'LRC2Bound' are not compatible with type parameters for type 'Bound'
        LA2,
        LB2,
        LRC2Bound<
            _BC<__BCT>,
            _BT,
            _BTB
        >,
    > {
        <FinalC<_FT extends LA2 | LB2> extends LC2<_FT>>(lc2la2: FinalC<LA2>): FinalC<LB2>
    }
    
    declare function lift<
        C<_T extends ActTBound> extends ActBound & Bounded<C, ActBound, _T, ActTBound>,
        ActBound,
        ActTBound
    >
    (fToLift: StaticFunctor<C, ActBound, ActTBound>): LiftedResult<C, ActBound, ActTBound>
    
    interface StartVal {
        startVal: string
    }
    
    interface EndVal {
        endVal: number
    }
    
    
    declare const fooObj: FunctorFoo<StartVal>
    declare function stringLength(strarg: StartVal): EndVal
    
    const liftedStaticMap = lift(staticMap);
                                 ~~~~~~~~~
!!! error TS2345: Argument of type '<C1 extends Functor<C1, T1Bound, T1Bound>, T1Bound, A1 extends T1Bound, B1 extends T1Bound>(fa1: C1, fmap1: FMap<A1, B1>) => C1' is not assignable to parameter of type 'StaticFunctor<Functor<CX, AX, AXBound>, {}, {}>'.
!!! error TS2345:   Types of parameters 'fmap1' and 'fmap2' are incompatible.
!!! error TS2345:     Types of parameters 'fmapfa' and 'fmapfa' are incompatible.
!!! error TS2345:       Type 'AXBound' is not assignable to type 'AS'.
    const liftedStringLength = liftedStaticMap(stringLength);
    const result = liftedStringLength(fooObj);
    const expectedType: FunctorFoo<EndVal> = result;
    const expectError = liftedStringLength(result)
    
    
    declare const declaredStaticFunctor: StaticFunctor<Functor, Functor>
    const liftedDeclaredStaticFunctor = lift(declaredStaticFunctor);
    const liftedDeclaredStringLength = liftedDeclaredStaticFunctor(stringLength)
    const declaredResult = liftedDeclaredStringLength(fooObj);
    const expectedTypeDeclared: FunctorFoo<EndVal> = declaredResult;
    const expectErrorDeclared = liftedDeclaredStringLength(declaredResult)
                                                           ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'FunctorFoo<EndVal>' is not assignable to parameter of type 'FunctorFoo<StartVal>'.
!!! error TS2345:   Type 'EndVal' is not assignable to type 'StartVal'.
!!! error TS2345:     Property 'startVal' is missing in type 'EndVal'.
    